# ve

./: INSTALL.md  Inventory  LICENSE.txt  README.md  RELEASE_NOTES.md  pom.xml
c/: CMakeLists.txt  Makefile  ve.c  ve.h  veerr.c  veinternal.c  veinternal.h  velist.c  velist.h  veparser.c
c/tests/: Makefile  XGetopt.c  XGetopt.h  test1.c  test2.c  testcommon.h
compiler/: pom.xml
compiler/src/main/java/ucar/ve/compiler/: Action.java  Actions.java  CompileException.java  Generator.java  JavaREGenerator.java  Main.java  Parser.java  Semantics.java  TextStream.java  Types.java  Util.java  VELexer.java  VEParser.java  VEParserBody.java  Verb.java  Verbs.java  rwu.ve
grammars/: build.xml  ve.y
tests/: pom.xml
tests/src/test/java/ucar/ve/test/: AbstractTest.java  Test1.java  Test1Verbs.java  Test2.java  Test2Verbs.java  Test3.java  Test3Verbs.java  rwu.ve  rwu3.ve
ve/: pom.xml
ve/src/main/java/ucar/ve/: Action.java  Actions.java  Configuration.java  Generator.java  Parser.java  Types.java  Util.java  VE.java  VEException.java  VEParser.java  Verb.java  fix
